--- a/rental.html
+++ b/rental.html
@@ -231,15 +231,25 @@
   <div class="collections horizontal">
     <div class="product-card horizontal-card">
       <div class="image-section">
-        <img src="https://i.imgur.com/k8Vv425.jpg" class="product-image main-img" alt="Montre Classique" />
+        <img src="https://i.imgur.com/VZij8yX.jpg" class="product-image main-img" alt="Montre Classique" />
         <div class="thumbnail-row">
-          <img src="https://i.imgur.com/rjROC85.jpg" class="thumb" data-main="https://i.imgur.com/rjROC85.jpg" alt="Vue 1A" />
-          <img src="https://i.imgur.com/k8Vv425.jpg" class="thumb" data-main="https://i.imgur.com/k8Vv425.jpg" alt="Vue 1B" />
+          <img src="https://i.imgur.com/V4aG7aB.jpg" class="thumb" data-main="https://i.imgur.com/rjROC85.jpg" alt="Vue 1A" />
+          <img src="https://i.imgur.com/9zxioO5.jpg" class="thumb" data-main="https://i.imgur.com/k8Vv425.jpg" alt="Vue 1B" />
         </div>
       </div>
       <div class="info-section">
-        <div class="product-name">Montre Classique</div>
-        <div class="product-desc">Montre en acier inoxydable avec bracelet en cuir véritable. Élégante et robuste.</div>
+        <div class="product-name">KIA SPORTAGE 2008</div>
+        <div class="product-desc">Engines: 2.0L four-cylinder (140 hp) or 2.7L V6 (173 hp). 
+Transmissions: 5-speed manual (standard on four-cylinder LX), 4-speed automatic (standard on V6 and available on four-cylinder). 
+Drivetrain: Front-wheel drive or all-wheel drive. 
+Seating: 5 passengers. 
+Cargo Capacity: 23.6 cubic feet (expandable with rear seats folded). 
+Fuel Economy (estimated):
+Four-cylinder FWD: 20 MPG city / 25 MPG highway. 
+V6 AWD: 17 MPG city / 21 MPG highway. 
+Standard Features (LX): 5-speed manual transmission, cruise control, 16-inch alloy wheels, CD audio system, air conditioning, 8-way adjustable driver's seat. 
+Additional Features (EX): Power sunroof, fog lights, remote keyless entry, upgraded audio with cassette. 
+Safety: Four-wheel anti-lock disc brakes, electronic stability control, and six airbags (including side curtain airbags). </div>
         <div class="product-price">Prix : 59,99 €</div>
         <button class="detail-btn">Ajouter au panier</button>
       </div>
