--- a/rental.html
+++ b/rental.html
@@ -233,24 +233,21 @@
       <div class="image-section">
         <img src="https://i.imgur.com/VZij8yX.jpg" class="product-image main-img" alt="Montre Classique" />
         <div class="thumbnail-row">
-          <img src="https://i.imgur.com/V4aG7aB.jpg" class="thumb" data-main="https://i.imgur.com/rjROC85.jpg" alt="Vue 1A" />
-          <img src="https://i.imgur.com/9zxioO5.jpg" class="thumb" data-main="https://i.imgur.com/k8Vv425.jpg" alt="Vue 1B" />
+          <img src="https://i.imgur.com/V4aG7aB.jpg" class="thumb" data-main="https://i.imgur.com/V4aG7aB.jpg" alt="Vue 1A" />
+          <img src="https://i.imgur.com/9zxioO5.jpg" class="thumb" data-main="https://i.imgur.com/9zxioO5.jpg" alt="Vue 1B" />
         </div>
       </div>
       <div class="info-section">
         <div class="product-name">KIA SPORTAGE 2008</div>
-        <div class="product-desc">Engines: 2.0L four-cylinder (140 hp) or 2.7L V6 (173 hp). 
-Transmissions: 5-speed manual (standard on four-cylinder LX), 4-speed automatic (standard on V6 and available on four-cylinder). 
+        <div class="product-desc">Engines: 2.7L V6 (173 hp). 
+Transmissions: 4-speed automatic 
 Drivetrain: Front-wheel drive or all-wheel drive. 
 Seating: 5 passengers. 
 Cargo Capacity: 23.6 cubic feet (expandable with rear seats folded). 
-Fuel Economy (estimated):
-Four-cylinder FWD: 20 MPG city / 25 MPG highway. 
-V6 AWD: 17 MPG city / 21 MPG highway. 
-Standard Features (LX): 5-speed manual transmission, cruise control, 16-inch alloy wheels, CD audio system, air conditioning, 8-way adjustable driver's seat. 
-Additional Features (EX): Power sunroof, fog lights, remote keyless entry, upgraded audio with cassette. 
+Fuel Economy: V6 AWD: 17 MPG city / 21 MPG highway. 
+Standard Features (LX):cruise control, 16-inch alloy wheels, CD audio system, air conditioning, 8-way adjustable driver's seat. 
 Safety: Four-wheel anti-lock disc brakes, electronic stability control, and six airbags (including side curtain airbags). </div>
-        <div class="product-price">Prix : 59,99 €</div>
+        <div class="product-price">Prix : $200 / WEEKLY</div>
         <button class="detail-btn">Ajouter au panier</button>
       </div>
     </div>
