--- a/rental.html
+++ b/rental.html
@@ -240,13 +240,8 @@
       <div class="info-section">
         <div class="product-name">KIA SPORTAGE 2008</div>
         <div class="product-desc">Engines: 2.7L V6 (173 hp). 
-Transmissions: 4-speed automatic 
-Drivetrain: Front-wheel drive or all-wheel drive. 
-Seating: 5 passengers. 
-Cargo Capacity: 23.6 cubic feet (expandable with rear seats folded). 
+4-speed automatic, Front-wheel drive, 5 passengers, Cargo Capacity: 23.6 cubic,
 Fuel Economy: V6 AWD: 17 MPG city / 21 MPG highway. 
-Standard Features (LX):cruise control, 16-inch alloy wheels, CD audio system, air conditioning, 8-way adjustable driver's seat. 
-Safety: Four-wheel anti-lock disc brakes, electronic stability control, and six airbags (including side curtain airbags). </div>
         <div class="product-price">Prix : $200 / WEEKLY</div>
         <button class="detail-btn">Ajouter au panier</button>
       </div>
