--- a/rental.html
+++ b/rental.html
@@ -243,7 +243,7 @@
 4-speed automatic, Front-wheel drive, 5 passengers, Cargo Capacity: 23.6 cubic,
 Fuel Economy: V6 AWD: 17 MPG city / 21 MPG highway. 
         <div class="product-price">Prix : $200 / WEEKLY</div>
-        <button class="detail-btn">Ajouter au panier</button>
+        <button class="detail-btn">AVAILABLE NOW</button>
       </div>
     </div>
 
